# Utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Base.cmake  CompilerOptions.cmake  Config.cmake  Diagnostics.cmake
include/utils/: BaseDefines.hpp  Config.hpp  Defer.hpp  Enum.hpp  Exception.hpp  InputConfig.hpp  MarkStep.hpp  Result.hpp  Util.hpp
source/: InputConfig.cpp  MarkStep.cpp
tests/: CMakeLists.txt  EnumTests.cpp
